counselx-k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counselx-ingress
  namespace: counselx
spec:
  ingressClassName: nginx
  rules:
    - host: api.counselx.nexorachat.online
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
